[tool.poetry]
name = "django-webhook"
version = "0.0.2"
description = ""
authors = ["Dani Hodovic <you@example.com>"]
license = "MIT"

[tool.black]
skip_numeric_underscore_normalization = true
exclude = ".*(venv|virtualenv|.poetry|migrations|node_modules)"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = '.virtualenv,.venv,.poetry,.poetry-cache'

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.*"
django-model-utils = "4.*"
celery = "5.*"
requests = "2.*"

[tool.poetry.dev-dependencies]
django-extensions = "3.*"
pytest = "7.*"
pytest-cov = "4.*"
pytest-django = "4.*"
coverage = "7.*"
django-coverage-plugin = "3.*"
black = "23.*"
mypy = "1.*"
mypy-extensions = "1.*"
pylint = "2.*"
pylint-django = "2.*"
ptpython = "3.*"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.2.1"
pudb = "^2022.1.3"
responses = "^0.23.1"
pytest-celery = "^0.0.0"
freezegun = "^1.2.2"
pytest-mock = "^3.11.1"
werkzeug = "^2.3.6"
django-stubs = "^4.2.4"
types-requests = "^2.31.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
omit = [
    "django_webhook/checks.py",
]
