[tool.poetry]
name = "django-webhook"
version = "0.0.15"
description = ""
authors = ["Dani Hodovic <you@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/danihodovic/django-webhook"
documentation = "https://django-webhook.readthedocs.io/en/latest/"
keywords = ["webhooks", "http", "microservices"]
classifiers = [
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: System :: Distributed Computing",
	"Framework :: Celery",
	"Framework :: Django",
]

[tool.black]
skip_numeric_underscore_normalization = true
exclude = ".*(venv|virtualenv|.poetry|migrations|node_modules)"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = '.virtualenv,.venv,.poetry,.poetry-cache'

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.0,<6.0"
django-model-utils = "4.*"
celery = "5.*"
requests = "2.*"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^24.8.0"}
celery = {extras = ["redis"], version = "^5.3.4"}
coverage = "7.*"
django-coverage-plugin = "3.*"
django-extensions = "3.*"
django-stubs = "^4.2.4"
factory-boy = "^3.2.1"
flask = "^3.0.0"
freezegun = "^1.2.2"
isort = "^5.13.2"
mypy = "^1.11.1"
mypy-extensions = "1.*"
psycopg2 = "^2.9.9"
ptpython = "3.*"
pudb = "^2022.1.3"
pylint = "^3.2.6"
pylint-django = "2.*"
pytest = "^8.3.2"
pytest-celery = "^0.0.0"
pytest-cov = "4.*"
pytest-django = "4.*"
pytest-factoryboy = "^2.7.0"
pytest-mock = "^3.11.1"
pyyaml = "^6.0.1"
responses = "^0.23.3"
types-requests = "^2.31.0.2"
werkzeug = "^3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
omit = [
    "django_webhook/checks.py",
]
